# ezyproduction-tauri

./: .gitignore  AGENTS.md  README.md  package.json  test_api.sh  tsconfig.json
EzyProduction_0.1.0_portable/: basecfgdata.json  selectdata.json
docs/: architecture.md  factory-tool-api.md
portable/: selectdata.json
portable/Data/: execute_sn_data.json  production_device_data.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_client.rs  data.rs  lib.rs  license.rs  main.rs  sn_generator.rs  types.rs
