[package]
name = "factory-tool"
version = "0.1.0"
description = "5G Factory Serial Number Management Tool"
authors = ["Arixo"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
mac_address = "1.1"
dirs = "5"
thiserror = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
